# http

./: .gitignore  .npmrc  BuildTools.cmake  CMakeLists.txt  LICENSE  README.md  bench.py  bench.sh  http.cmake  package.json  valgrind.sh
examples/: bench.c  build.cmake  example.c  main.c
ext/picohttpparser/: picohttpparser.cmake
ext/sds/: CMakeLists.txt
include/http/: __x_http_header__  http.h  http_dict.h  http_header.h  http_method.h  http_pair.h  http_request.h  http_response.h  http_status.h  http_string.h
sources/: build.cmake  http.c  http.h  http_error.c  http_error.h  http_fire_result.c  http_fire_result.h  http_maybe_text.c  http_maybe_text.h  http_method.c  http_method.h  http_request.c  http_request.h  http_response.c  http_response.h  http_status.c  http_status.h
src/: http.c  http_dict.c  http_pair.c  http_request.c  http_response.c  http_string.c
tests/unit/: build.cmake  describe.c  fixtures.c  fixtures.h
tests/unit/features/: http_fire_result.c  http_fire_result.h  http_maybe_text.c  http_maybe_text.h
